Home Page Redesign

--- a/kingsleycodes/portfolio/templates/about.html
+++ b/kingsleycodes/portfolio/templates/about.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="flex justify-center parallax" data-speed="0.3">
-            <img src="{% static 'images/about-profile.png' %}" alt="Kingsley Ofoma" class="rounded-2xl shadow-2xl w-80 h-80 object-cover fade-in-up">
+            <img src="{% static 'images/hero/hero-profile.webp' %}" alt="Kingsley Ofoma" class="rounded-2xl shadow-2xl w-80 h-80 object-cover fade-in-up">
         </div>
     </div>
 
