--- a/kingsleycodes/portfolio/templates/projects.html
+++ b/kingsleycodes/portfolio/templates/projects.html
@@ -14,18 +14,14 @@
       {% for project in projects %}
       <div
         class="bg-white dark:bg-gray-800 rounded-2xl overflow-hidden shadow hover:shadow-lg transform hover:-translate-y-1 transition-all duration-300 animate-fade-in">
-        {% if project.image %}
-        <img src="{{ project.image.url }}" alt="{{ project.title }}" class="w-full h-56 object-cover" />
-        {% else %}
-        <img src="{% static 'images/default-project.jpg' %}" alt="Default project" class="w-full h-56 object-cover" />
-        {% endif %}
+        <img src="{% static project.image %}" alt="{{ project.title }}" class="w-full h-56 object-cover" />
         <div class="p-6">
           <h2 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">{{ project.title }}</h2>
           <p class="text-gray-600 dark:text-gray-300 mb-4 line-clamp-3">{{ project.description|truncatewords:20 }}</p>
 
           {% if project.link %}
-          <a href="{{ project.link }}" target="_blank"
-            class="inline-block text-indigo-600 dark:text-indigo-400 font-semibold hover:underline">View Project →</a>
+          <a href={{ project.link }} class="mt-4 px-3 py-3 inline-block bg-indigo-600 hover:bg-indigo-700 
+        text-white rounded-lg shadow-lg transition transform hover:scale-105 font-medium">View Project →</a>
           {% endif %}
         </div>
       </div>
