--- a/kingsleycodes/portfolio/templates/service_detail.html
+++ b/kingsleycodes/portfolio/templates/service_detail.html
@@ -38,7 +38,7 @@
 
       {% if service.image %}
       <div class="mb-6">
-        <img src="{{ service.image.url }}" alt="{{ service.title }}" class="w-full rounded-xl shadow-md">
+        <img src="{% static service.image %}" alt="{{ service.title }}" class="w-full rounded-xl shadow-md">
       </div>
       {% endif %}
 
